More work on @Recorded errors.